# 42-linear_regression

./: .gitignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: main.yaml
assets/: linear_model.csv  salary_model.csv
linear_regression/: Cargo.toml
linear_regression/src/: dataset.rs  lib.rs  linear_model.rs  plotter.rs
